--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,4 @@
-Search
-Copy
+
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -12,7 +11,12 @@ Copy
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+       <a [routerLink]="['/eventlist']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">Events List</a>
+      </li>
+      <li class="nav-item">
+       <a [routerLink]="['/createevent']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+true}">Create Event</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
