--- a/src/app/events-list/events-list.component.html
+++ b/src/app/events-list/events-list.component.html
@@ -5,7 +5,7 @@
     <h1>Upcoming Angular 2 Events</h1>
     <hr/>
     <div class="row">
-      <div *ngFor="let event of events" class="col-md-5">
+      <div *ngFor="let event of events | async " class="col-md-5">
         <event-thumbnail [event]="event"></event-thumbnail>
       </div>
     </div>
